# the-101-game

./: .editorconfig  .env  .gitattributes  .gitignore  .gitmodules  404.html  AI_POLICY.md  CHANGELOG.md  CLOCK.json  CONTACT.md  CONTRIBUTING.md  LICENSE  NOW.txt  README.md  README.nl.md  SECURITY.md  SYSTEM.CONFIG  W0.html  ai.py  blink.cmd  bootstrap.ps1  check-101.ps1  clean_repo.ps1  curriculum.md  db_connect.php  deploy.ps1  engine.py  film.bat  frame0.py  god.ahk  gzip.config  huelamp.py  index-en.html  index-nl.html  index.html  key.txt  km.bat  kukels.csv  lamp.py  main.py  (+28 more)
.bin/: shot.cmd  ts.cmd  w0.cmd
.githooks/: post-merge.txt  pre-commit.bat  pre-commit.ps1
LEGAL/: NOTICE-LICEcap.txt
assets/: style.css
core/: __init__.py  audio.py  progress.py  rt.py  tts.py  ui.py
data/: chain_economie.txt  chain_hardware.txt  chain_software.txt  choices_log.txt  demographics_schema.psd1  function blink {.txt  hue_config.example.json  hue_config.json  hue_teams.psd1  progress.json  scene_chain.txt  scene_music.json  settings.json  titles.json  worlds.json
docs/: README.md  RQ_FundamenteleVraag.md  RQ_FundamenteleVraag.psd1  W0.html  W1.html  W2.html  W3.html  W4.html  W5.html  W6.html  W7.html  W8.html  W9.html  _week.template.html  graph.html  graph.md  index.html  space_hue.txt
frames/: frame0.py  frame1.py
logs/: last-run.txt
notes/: 2025-09-05-154623-gravity-flip-trial.md
scenes/: d_frame.py  d_minor.py  dev_settings.py  frame_square.py  level7_spectro_mix.py  level_story_one.py  level_story_one.py.bak  scene0.py  scene00_hallo_mama.py  scene1.py  (+26 more)
(+116 files in other folders)
